--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script>
         // Domain gốc của bạn
-        const officialDomain = "mywebsite.com";
+        const officialDomain = "pandat369.github.io";
 
         // Lấy domain hiện tại
         const currentDomain = window.location.hostname;
@@ -60,5 +60,6 @@
         })();
     </script>
 </body>
+
 
 </html>
