--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             const devtoolsMessage = `<h1 style="color:red">🛑 Đừng mở DevTools!</h1>`;
 
             function blockIfDevtools() {
-                const opened = window.outerWidth - window.innerWidth < 0 || window.outerWidth - window.innerWidth > 160
+                const opened = window.outerWidth - window.innerWidth > 160
                             || window.outerHeight - window.innerHeight > 160;
                 if (opened && !blocked) {
                     blocked = true;
@@ -58,4 +58,5 @@
 
 
 </html>
+
 
