--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script>
         // Domain gốc của bạn
-        const officialDomain = "pandat369.github.io";
+        const officialDomain = "mywebsite.com";
 
         // Lấy domain hiện tại
         const currentDomain = window.location.hostname;
@@ -21,46 +21,67 @@
             fetch("https://api.ipify.org?format=json")
                 .then(res => res.json())
                 .then(data => {
-                    document.body.innerHTML = ""; // xoá hết nội dung
+                    document.body.innerHTML = ""; // Xoá hết nội dung
+
                     const warningDiv = document.createElement("div");
                     warningDiv.style.color = "red";
                     warningDiv.style.fontWeight = "bold";
                     warningDiv.style.fontSize = "20px";
                     warningDiv.style.textAlign = "center";
-                    warningDiv.style.marginTop = "50px";
-                    warningDiv.innerText =
-                        "⚠️ \n  \nCảnh báo bảo mật!\n Bạn đang truy cập bản sao của website.\nIP của bạn là: " + data.ip + "\n Sao chép mã nguồn là vi phạm.";
+                    warningDiv.style.marginTop = "100px";
+                    warningDiv.style.padding = "20px";
+
+                    // Tạo ảnh GIF
+                    const warningImg = document.createElement("img");
+                    warningImg.src = "https://media.tenor.com/V-JWVD63aeAAAAAi/breaking-light.gif";
+                    warningImg.alt = "Cảnh báo";
+                    warningImg.style.width = "80px";
+                    warningImg.style.height = "80px";
+                    warningImg.style.display = "block";
+                    warningImg.style.margin = "0 auto 20px";
+
+                    // Tạo nội dung văn bản
+                    const warningText = document.createElement("div");
+                    warningText.innerText =
+                        "Cảnh báo bảo mật!\nIP của bạn là: " +
+                        data.ip +
+                        "\nBạn đang truy cập bản sao của website.";
+
+                    // Gắn ảnh và văn bản vào div
+                    warningDiv.appendChild(warningImg);
+                    warningDiv.appendChild(warningText);
+
+                    // Hiển thị lên body
                     document.body.appendChild(warningDiv);
+
                 });
         }
 
         (function () {
-    let blocked = false;
-    const devtoolsMessage = `<h1 style="color:red">🛑 Đừng mở DevTools!</h1>`;
+            let devtoolsOpened = false;
+            const devtoolsMessage = `<h1 style="color:red">🛑 Đừng mở DevTools!</h1>`;
 
-    function blockIfDevtools() {
-        // Lấy hiệu tuyệt đối; chỉ coi là "mở" khi khác biệt lớn (ngưỡng 160 px)
-        const diff = Math.abs((window.outerWidth || 0) - (window.innerWidth || 0));
-        const opened = diff >= 160; // ngưỡng 160px: khá an toàn cho desktop docked
+            function checkDevTools() {
+                // So sánh kích thước của đối tượng console
+                // Đây là cách phát hiện phổ biến nhất và hiệu quả nhất
+                const sizeCheck = /Mobi|Android/i.test(navigator.userAgent) ?
+                    window.innerHeight - screen.height > 100 || window.innerWidth - screen.width > 100 :
+                    window.outerHeight - window.innerHeight > 160 || window.outerWidth - window.innerWidth > 160;
 
-        if (opened && !blocked) {
-            blocked = true;
-            document.body.innerHTML = devtoolsMessage;
-        } else if (!opened && blocked) {
-            blocked = false;
-            location.reload();
-        }
-    }
+                if (sizeCheck) {
+                    if (!devtoolsOpened) {
+                        devtoolsOpened = true;
+                        document.body.innerHTML = devtoolsMessage;
+                    }
+                } else {
+                    devtoolsOpened = false;
+                }
+            }
 
-    setInterval(blockIfDevtools, 500);
-})();
-
+            // Cải thiện kiểm tra bằng cách sử dụng một hàm khác hoặc một thư viện chuyên dụng.
+            setInterval(checkDevTools, 500);
+        })();
     </script>
 </body>
 
-
 </html>
-
-
-
-
